<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cricket_Fragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

    <TextView
        android:id="@+id/GameTitle"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:text="@string/cricket_game"
        android:textSize="30sp"
        android:textAlignment="center"
        android:fontFamily="sans-serif-black"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="25dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/YourScore"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/your_score"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/Score"
            android:layout_width="0dp"
            android:autofillHints="0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/score"
            android:textSize="25sp"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

    <EditText
        android:id="@+id/YourHand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:hint="@string/enter_a_number_between_1_6"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:id="@+id/PlayButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ComputerPlays"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/computer_played_a"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/ComputerHand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:hint="@string/computer_hand"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/Commentary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/status"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:contentDescription="@string/gif" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Replay"
        android:layout_marginStart="150sp"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="270sp"
        android:layout_marginTop="60sp"

        android:text="@string/rules" />
    </LinearLayout>

</FrameLayout>